tests/ui/privacy/suggest-box-new.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
  --> $DIR/suggest-box-new.rs:8:19
   |
LL |         wtf: Some(Box(U {
   |                   ^^^
   |
note: constructor is not visible here due to private fields
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
   |
   = note: private field
   |
   = note: private field
help: you might have meant to use an associated function to build this type
   |
LL |         wtf: Some(Box::new(U {
   |                      +++++
LL |         wtf: Some(Box::new_uninit_in(U {
   |                      +++++++++++++++
LL |         wtf: Some(Box::new_zeroed_in(U {
   |                      +++++++++++++++
LL |         wtf: Some(Box::new_uninit_slice(U {
   |                      ++++++++++++++++++
     and 10 other candidates
help: consider using the `Default` trait
   |
LL |         wtf: Some(<Box as std::default::Default>::default()),
   |                   +    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
